@@ -2,6 +2,7 @@ CHANGES IN VERSION 1.4.20
 -------------------------
 BUG FIXES
     o Bug fix in icgcSimpleMutationToMAF while converting ICGC maf to MAF object in. Issue: #105
+    o Bug fix in oncomatrix function which earlier did not drop missing factor.
 
 CHANGES IN VERSION 1.4.15
 -------------------------
